--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,15 +7,21 @@ COPY package*.json ./
 RUN npm ci
 
 COPY . .
-
+ARG VITE_API_BASE=3.94.106.122
+ENV VITE_API_BASE=$VITE_API_BASE
 RUN npm run build
 
-FROM nginx:alpine
-
-COPY --from=builder /app/dist /usr/share/nginx/html
-
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+# Serve stage
+FROM nginx:1.27-alpine
+# Remove default site & add our static build
+RUN rm /etc/nginx/conf.d/default.conf
+COPY --from=build /app/dist /usr/share/nginx/html
+# simple Nginx conf for static files
+RUN printf 'server { \
+  listen 8080; \
+  server_name _; \
+  root /usr/share/nginx/html; \
+  index index.html; \
+  location / { try_files $uri /index.html; } \
+}\n' > /etc/nginx/conf.d/site.conf
+EXPOSE 8080
